# clawreinforce-v1

./: .gitignore  AGENTS.md  README.md  pyproject.toml
demo/: demo.ps1  demo.sh
docs/: AGENT_QUICKSTART.md  BUILDWEEKV2_PROMPTS.md  DEMO.md  FLAGSHIPS.md  POSTMORTEMS.md  SPEC.md  SUBMISSION.md
examples/api-migration-skill/: SKILL.md  cases.json
examples/api-migration-task/: task.json
examples/hello-skill/: SKILL.md  cases.json
examples/improvable-uppercase-skill/: SKILL.md  cases.json
examples/incident-triage-skill/: SKILL.md  cases.json
examples/incident-triage-task/: task.json
examples/privacy-redaction-skill/: SKILL.md  cases.json
examples/privacy-redaction-task/: task.json
examples/uppercase-skill/: SKILL.md  cases.json
examples/uppercase-task/: task.json
src/clawreinforce/: __init__.py  __main__.py  errors.py
src/clawreinforce/adapters/: __init__.py  cli.py  cli_improve.py  fixtures.py  http.py  http_arena.py  http_improve.py  http_traps.py  http_verify.py  mcp_server.py  model_catalog.py  providers.py  (+2 more)
tests/: test_arena.py  test_certificates.py  test_certification.py  test_checks.py  test_cli.py  test_demo_scripts.py  test_flagships.py  test_guard.py  test_http_arena.py  test_http_verify.py  test_improve.py  test_mcp.py  test_provider_probe.py  test_providers.py  test_skill_scan.py  test_sources.py  test_traps.py
web/: app.js  arena-results.js  arena.js  arena_history.js  harden-evidence.js  improve.js  index.html  model-catalog.js  model-picker.js  model-picker.test.mjs  models.js  run-progress.js  styles.css  traps.js  ui.js  verify.js
(+20 files in other folders)
