[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "clawreinforce"
version = "0.1.0"
description = "CI for agent skills: verify before install."
requires-python = ">=3.11"
dependencies = ["cryptography>=44", "Pillow>=11"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=6", "mcp>=1.27,<2"]
mcp = ["mcp>=1.27,<2"]

[project.scripts]
clawreinforce = "clawreinforce.adapters.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
